Get my tmux conf working

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,9 @@
     ~/.rainbow.sh:
       force: true
       path: rainbow.sh
+    ~/.tmux.conf:
+      force: true
+      path: .tmux.conf
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
