Change tmux prefix to Ctrl-\

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,4 +13,4 @@ bind - split-window -v -c "#{pane_current_path}"
 set -g mouse on
 
 unbind C-b
-set-option -g prefix '\'
+set-option -g prefix 'C-\'
