--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,5 +12,10 @@ bind - split-window -v -c "#{pane_current_path}"
 # Enable mouse support
 set -g mouse on
 
+# Set Ctrl-\ as leader instead of Ctrl-b
 unbind C-b
 set-option -g prefix 'C-\'
+
+# Set terminal title to match tmux
+set-option -g set-titles on
+set-option -g set-titles-string "#{session_name} - #{window_name}"
