Add tmux styling, etc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,57 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # Enable mouse support
-set -g mouse on
+# set -g mouse on
 
 # Set Ctrl-\ as leader instead of Ctrl-b
 unbind C-b
 set-option -g prefix 'C-\'
 
+# Send Ctrl-\ the second time Ctrl-\ is pressed
+bind 'C-\' send-prefix
+
+# Use vim keybindings for pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Use {H,J,K,L} repeatedly to resize panes
+bind -r H resize-pane -L 5
+bind -r J resize-pane -L 5
+bind -r K resize-pane -L 5
+bind -r L resize-pane -L 5
+
 # Set terminal title to match tmux
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{window_name}"
+
+# Shorten the keystroke delay added by tmux
+set -s escape-time 1
+
+# Force tmux to display 256 colors
+set -g default-terminal "screen-256color"
+
+# Monitor for activity, bells, or silence of 10 seconds in the other windows
+setw -g monitor-activity on
+setw -g monitor-bell on
+setw -g monitor-silence 5
+
+# rwb-link-light="#3366cc"
+# rwb-button-background-dark="#3366cc"
+
+# Set style for the status bar
+set -g status-style fg=white,bg=black
+
+# Set style for the command prompt
+set -g message-style fg=white,bold,bg=black
+
+# Set the style for windows in status bar
+setw -g window-status-format '#I#[fg=white,bg=black]:#W#[fg=#3366cc,bg=black]#F'
+
+# Set the style for the current window in status bar
+setw -g window-status-current-format '#[fg=white,bg=black]#I#[fg=white]:#[fg=white,bold]#W#[fg=#3366cc]#F'
+
+# Set style for pane border
+set -g pane-border-style "fg=#254A93 bg=black"
+set -g pane-active-border-style "fg=#254A93 bg=black"
