--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,35 +1,11 @@
+## Global settings
+
 # Set default shell to zsh
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
-# Open new windows in current working directory
-bind c new-window -c "#{pane_current_path}"
-
-# Use <leader>| and <leader>- to split vertically and horizontally
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
-
 # Enable mouse support
 # set -g mouse on
-
-# Set Ctrl-\ as leader instead of Ctrl-b
-unbind C-b
-set-option -g prefix 'C-\'
-
-# Send Ctrl-\ the second time Ctrl-\ is pressed
-bind 'C-\' send-prefix
-
-# Use vim keybindings for pane navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Use {H,J,K,L} repeatedly to resize panes
-bind -r H resize-pane -L 5
-bind -r J resize-pane -L 5
-bind -r K resize-pane -L 5
-bind -r L resize-pane -L 5
 
 # Set terminal title to match tmux
 set-option -g set-titles on
@@ -41,10 +17,52 @@ set -s escape-time 1
 # Force tmux to display 256 colors
 set -g default-terminal "screen-256color"
 
+## Keybindings
+
+# Set Ctrl-\ as leader instead of Ctrl-b
+unbind C-b
+set-option -g prefix 'C-\'
+
+# Send Ctrl-\ the second time Ctrl-\ is pressed
+bind -N "Send prefix" 'C-\' send-prefix
+
+# Open new windows in current working directory
+bind -N "Create a new window at the current working directory" c new-window -c "#{pane_current_path}"
+
+# Use <leader>| and <leader>- to split vertically and horizontally
+bind -N "Split window vertically" | split-window -h -c "#{pane_current_path}"
+bind -N "Split window horizontally" - split-window -v -c "#{pane_current_path}"
+
+# Use vim keybindings for pane navigation
+bind -N "Move to the next left pane" h select-pane -L
+bind -N "Move to the next lower pane" j select-pane -D
+bind -N "Move to the next upper pane" k select-pane -U
+bind -N "Move to the next right pane" l select-pane -R
+
+# Use {H,J,K,L} repeatedly to resize panes
+bind -N "Resize pane to the left (repeatable)" -r H resize-pane -L 5
+bind -N "Resize pane lower (repeatable)" -r J resize-pane -D 5
+bind -N "Resize pane higher (repeatable)" -r K resize-pane -U 5
+bind -N "Resize pane to the right (repeatable)" -r L resize-pane -R 5
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Use v to begin/end visual selection like vim
+bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
+
+# Use <leader>R to reload .tmux.conf
+# Always displays this message on launch though, sad :(
+# bind -N "Source ~/.tmux.conf" R source-file ~/.tmux.conf |; display "Sourced ~/.tmux.conf"
+
+## Monitoring
+
 # Monitor for activity, bells, or silence of 10 seconds in the other windows
 setw -g monitor-activity on
 setw -g monitor-bell on
 setw -g monitor-silence 5
+
+## Styling
 
 # rwb-link-light="#3366cc"
 # rwb-button-background-dark="#3366cc"
