Bye bye vi-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,11 +11,26 @@ set -g default-command ${SHELL}
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{window_name}"
 
-# Shorten the keystroke delay added by tmux
-set -s escape-time 1
+# Shorten the escape keystroke delay added by tmux
+set -s escape-time 0
 
 # Force tmux to display 256 colors
 set -g default-terminal "screen-256color"
+
+# Increase scrollback buffer size
+set -g history-limit 50000
+
+# Refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+
+# Use standard readline / emacs keybindings in command prompt
+set -g status-keys emacs
+
+# focus events enabled for terminals that support them
+set -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
 
 ## Keybindings
 
@@ -52,8 +67,7 @@ setw -g mode-keys vi
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
 
 # Use <leader>R to reload .tmux.conf
-# Always displays this message on launch though, sad :(
-# bind -N "Source ~/.tmux.conf" R source-file ~/.tmux.conf |; display "Sourced ~/.tmux.conf"
+bind -N "Source ~/.tmux.conf" R source-file ~/.tmux.conf
 
 ## Monitoring
 
