tmux: Reenable mouse mode and fix activity highlighting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
 # Enable mouse support
-# set -g mouse on
+set -g mouse on
 
 # Set terminal title to match tmux
 set-option -g set-titles on
@@ -92,6 +92,9 @@ setw -g window-status-format '#I#[fg=white,bg=black]:#W#[fg=#3366cc,bg=black]#F'
 
 # Set the style for the current window in status bar
 setw -g window-status-current-format '#[fg=white,bg=black]#I#[fg=white]:#[fg=white,bold]#W#[fg=#3366cc]#F'
+
+# Don't highlight other windows with activity in the status bar
+setw -g window-status-activity-style bg=black
 
 # Set style for pane border
 set -g pane-border-style "fg=#254A93 bg=black"
