--- a/.gitconfig
+++ b/.gitconfig
@@ -19,3 +19,5 @@
     cn = "!f() { git diff $(git for-each-ref --color=always --sort=-committerdate refs/heads/ --format='%(color:bold)%(HEAD)%(color:reset) %(color:blue)%(refname:short)%(color:reset) (%(color:green)%(committerdate:relative)%(color:reset)) %(contents:subject)' | fzf --ansi --preview=\"echo {} | cut -c 3- | cut -d ' ' -f1 | xargs git log --color=always\" | cut -c 3- | cut -d ' ' -f 1) HEAD --name-only; }; f"
     l="log --oneline --decorate"
     oops = "commit -a --no-edit --amend"
+[push]
+	autoSetupRemote = true
