--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,35 +11,11 @@ set -g mouse on
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{window_name}"
 
-# Shorten the escape keystroke delay added by tmux
-set -s escape-time 0
-
-# Force tmux to display 256 colors
-set -g default-terminal "screen-256color"
-
-# Increase scrollback buffer size
-set -g history-limit 50000
-
-# Refresh 'status-left' and 'status-right' more often
-set -g status-interval 5
-
-# Use standard readline / emacs keybindings in command prompt
-set -g status-keys emacs
-
-# focus events enabled for terminals that support them
-set -g focus-events on
-
-# super useful when using "grouped sessions" and multi-monitor setup
-setw -g aggressive-resize on
-
 ## Keybindings
 
 # Set Ctrl-\ as leader instead of Ctrl-b
 unbind C-b
 set-option -g prefix 'C-\'
-
-# Send Ctrl-\ the second time Ctrl-\ is pressed
-bind -N "Send prefix" 'C-\' send-prefix
 
 # Open new windows in current working directory
 bind -N "Create a new window at the current working directory" c new-window -c "#{pane_current_path}"
@@ -47,12 +23,6 @@ bind -N "Create a new window at the current working directory" c new-window -c "
 # Use <leader>| and <leader>- to split vertically and horizontally
 bind -N "Split window vertically" | split-window -h -c "#{pane_current_path}"
 bind -N "Split window horizontally" - split-window -v -c "#{pane_current_path}"
-
-# Use vim keybindings for pane navigation
-bind -N "Move to the next left pane" h select-pane -L
-bind -N "Move to the next lower pane" j select-pane -D
-bind -N "Move to the next upper pane" k select-pane -U
-bind -N "Move to the next right pane" l select-pane -R
 
 # Use {H,J,K,L} repeatedly to resize panes
 bind -N "Resize pane to the left (repeatable)" -r H resize-pane -L 5
@@ -65,9 +35,6 @@ setw -g mode-keys vi
 
 # Use v to begin/end visual selection like vim
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
-
-# Use <leader>R to reload .tmux.conf
-bind -N "Source ~/.tmux.conf" R source-file ~/.tmux.conf
 
 ## Monitoring
 
@@ -99,3 +66,17 @@ setw -g window-status-activity-style bg=black
 # Set style for pane border
 set -g pane-border-style "fg=#254A93 bg=black"
 set -g pane-active-border-style "fg=#254A93 bg=black"
+
+# Enable tpm
+set -g @plugin 'tmux-plugins/tpm'
+
+# Set some sensible defaults
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Navigate between tmux panes and vim splits
+# Use <C-h>,<C-j>,<C-k>,<C-l> to navigate
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# Set up tpm
+# Remember to run <prefix>I to install!
+run '~/.tmux/plugins/tpm/tpm'
