--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set -g mouse on
 set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} - #{window_name}"
 
+# When we add/remove windows, renumber them in sequential order
+set -g renumber-windows on
+
 ## Keybindings
 
 # Set Ctrl-\ as leader instead of Ctrl-b
