--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,8 +36,14 @@ bind -N "Resize pane to the right (repeatable)" -r L resize-pane -R 5
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
-# Use v to begin/end visual selection like vim
+# Use v, y, and p to begin visual selection and yank/paste like vim
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
+bind -N "Copy visual selection to buffer" -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+unbind p
+bind -N "Paste latest buffer" p paste-buffer
+
+# Use <prefix>Escape to enter copy-mode
+bind -N "Open copy mode" Escape copy-mode
 
 ## Monitoring
 
