tmux: add tmux-fzf-url; add .inputrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,6 +86,10 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Use <C-h>,<C-j>,<C-k>,<C-l> to navigate
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
+# fzf URL opener
+# Use <C-u> to fuzzy-find and open links
+set -g @plugin 'wfxr/tmux-fzf-url'
+
 # Set up tpm
 # Remember to run <prefix>I to install!
 run '~/.tmux/plugins/tpm/tpm'
