Add fancy fzf-powered tmux window finder

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,9 @@ bind -N "Copy visual selection to buffer" -T copy-mode-vi y send-keys -X copy-pi
 unbind p
 bind -N "Paste latest buffer" p paste-buffer
 
+# Use Ctrl-f to open a fancy window finder
+bind -N "Open fuzzy window finder" -n C-f display-popup -E "tmux list-windows | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | cut -d \":\" -f 1 | xargs tmux select-window -t"
+
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
 
