--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,10 @@
       create: true
       force: true
       path: .config/nvim/
+    ~/.config/fish:
+      create: true
+      force: true
+      path: .config/fish/
     ~/.config/yamllint/config:
       create: true
       force: true
