--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -41,6 +41,10 @@
       create: true
       force: true
       path: .markdownlintrc
+    ~/.alacritty.yml:
+      create: true
+      force: true
+      path: .alacritty.yml
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
