--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -153,28 +153,34 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
+# Colors (Ayu Dark)
 colors:
+  # Default colors
   primary:
-    background: '0x0f1419'
-    foreground: '0xe6e1cf'
+    background: '#0A0E14'
+    foreground: '#B3B1AD'
+
+  # Normal colors
   normal:
-    black: '0x000000'
-    red: '0xf34a4a'
-    green: '0xbae67e'
-    yellow: '0xffee99'
-    blue: '0x73d0ff'
-    magenta: '0xd4bfff'
-    cyan: '0x83CEC6'
-    white: '0xf2f2f2'
+    black: '#01060E'
+    red: '#EA6C73'
+    green: '#91B362'
+    yellow: '#F9AF4F'
+    blue: '#53BDFA'
+    magenta: '#FAE994'
+    cyan: '#90E1C6'
+    white: '#C7C7C7'
+
+  # Bright colors
   bright:
-    black: '0x737d87'
-    red: '0xff3333'
-    green: '0xc2d94c'
-    yellow: '0xe7c547'
-    blue: '0x59c2ff'
-    magenta: '0xb77ee0'
-    cyan: '0x5ccfe6'
-    white: '0xffffff'
+    black: '#686868'
+    red: '#F07178'
+    green: '#C2D94C'
+    yellow: '#FFB454'
+    blue: '#59C2FF'
+    magenta: '#FFEE99'
+    cyan: '#95E6CB'
+    white: '#FFFFFF'
 
 # Colors (Tomorrow Night)
 #colors:
