--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -153,34 +153,34 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Ayu Dark)
+# Colors (Tomorrow Night Bright)
 colors:
   # Default colors
   primary:
-    background: '#0A0E14'
-    foreground: '#B3B1AD'
+    background: '0x000000'
+    foreground: '0xeaeaea'
 
   # Normal colors
   normal:
-    black: '#01060E'
-    red: '#EA6C73'
-    green: '#91B362'
-    yellow: '#F9AF4F'
-    blue: '#53BDFA'
-    magenta: '#FAE994'
-    cyan: '#90E1C6'
-    white: '#C7C7C7'
+    black: '0x000000'
+    red: '0xd54e53'
+    green: '0xb9ca4a'
+    yellow: '0xe6c547'
+    blue: '0x7aa6da'
+    magenta: '0xc397d8'
+    cyan: '0x70c0ba'
+    white: '0x424242'
 
   # Bright colors
   bright:
-    black: '#686868'
-    red: '#F07178'
-    green: '#C2D94C'
-    yellow: '#FFB454'
-    blue: '#59C2FF'
-    magenta: '#FFEE99'
-    cyan: '#95E6CB'
-    white: '#FFFFFF'
+    black: '0x666666'
+    red: '0xff3334'
+    green: '0x9ec400'
+    yellow: '0xe7c547'
+    blue: '0x7aa6da'
+    magenta: '0xb77ee0'
+    cyan: '0x54ced6'
+    white: '0x2a2a2a'
 
 # Colors (Tomorrow Night)
 #colors:
