--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,24 +60,27 @@ setw -g monitor-silence 5
 # rwb-link-light="#3366cc"
 # rwb-button-background-dark="#3366cc"
 
+set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 # Set style for the status bar
-set -g status-style fg=white,bg=black
+set -g status-style "fg=white,bg=#0f1419"
 
 # Set style for the command prompt
-set -g message-style fg=white,bold,bg=black
+set -g message-style "fg=white,bold,bg=#0f1419"
 
 # Set the style for windows in status bar
-setw -g window-status-format '#I#[fg=white,bg=black]:#W#[fg=#3366cc,bg=black]#F'
+setw -g window-status-format '#I#[fg=white,bg=#0f1419]:#W#[fg=#3366cc,bg=#0f1419]#F'
 
 # Set the style for the current window in status bar
-setw -g window-status-current-format '#[fg=white,bg=black]#I#[fg=white]:#[fg=white,bold]#W#[fg=#3366cc]#F'
+setw -g window-status-current-format '#[fg=white,bg=#0f1419]#I#[fg=white]:#[fg=white,bold]#W#[fg=#3366cc]#F'
 
 # Don't highlight other windows with activity in the status bar
-setw -g window-status-activity-style bg=black
+setw -g window-status-activity-style "bg=#0f1419"
 
 # Set style for pane border
-set -g pane-border-style "fg=#254A93 bg=black"
-set -g pane-active-border-style "fg=#254A93 bg=black"
+set -g pane-border-style "fg=#254A93 bg=#0f1419"
+set -g pane-active-border-style "fg=#254A93 bg=#0f1419"
 
 # Enable tpm
 set -g @plugin 'tmux-plugins/tpm'
