Fix colors of status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,23 +64,23 @@ set -g default-terminal "screen-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Set style for the status bar
-set -g status-style "fg=white,bg=#0f1419"
+set -g status-style "fg=#ffffff,bg=black"
 
 # Set style for the command prompt
-set -g message-style "fg=white,bold,bg=#0f1419"
+set -g message-style "fg=#ffffff,bold,bg=black"
 
 # Set the style for windows in status bar
-setw -g window-status-format '#I#[fg=white,bg=#0f1419]:#W#[fg=#3366cc,bg=#0f1419]#F'
+setw -g window-status-format '#I#[fg=#ffffff,bg=black]:#W#[fg=#3366cc,bg=black]#F'
 
 # Set the style for the current window in status bar
-setw -g window-status-current-format '#[fg=white,bg=#0f1419]#I#[fg=white]:#[fg=white,bold]#W#[fg=#3366cc]#F'
+setw -g window-status-current-format '#[fg=#ffffff,bg=black]#I#[fg=#ffffff]:#[fg=#ffffff,bold]#W#[fg=#3366cc]#F'
 
 # Don't highlight other windows with activity in the status bar
-setw -g window-status-activity-style "bg=#0f1419"
+setw -g window-status-activity-style "bg=black"
 
 # Set style for pane border
-set -g pane-border-style "fg=#254A93 bg=#0f1419"
-set -g pane-active-border-style "fg=#254A93 bg=#0f1419"
+set -g pane-border-style "fg=#254A93 bg=black"
+set -g pane-active-border-style "fg=#254A93 bg=black"
 
 # Enable tpm
 set -g @plugin 'tmux-plugins/tpm'
