Add backwards search quick action

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,8 @@ bind -N "Open fuzzy window finder" -n C-o display-popup -E "tmux list-windows | 
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
 
+bind -N "Perform backwards search in copy mode" -n C-s copy-mode \; send-keys ?
+
 ## Monitoring
 
 # Monitor for activity, bells, or silence of 10 seconds in the other windows
