Enable continuum restore in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,9 @@ set-option -g set-titles-string "#{session_name} - #{window_name}"
 # When we add/remove windows, renumber them in sequential order
 set -g renumber-windows on
 
+# Restore windows when restarting tmux
+set -g @continuum-restore 'on'
+
 ## Keybindings
 
 # Set Ctrl-\ as leader instead of Ctrl-b
@@ -97,6 +100,13 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # fzf URL opener
 # Use <C-u> to fuzzy-find and open links
 set -g @plugin 'wfxr/tmux-fzf-url'
+
+# Save and restart tmux sessions across system reboots 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Open highlighted link/file with <prefix>-o
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Set up tpm
 # Remember to run <prefix>I to install!
