--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,14 @@
       create: true
       force: true
       path: .config/nvim/
+    ~/.config/cheat/conf.yml:
+      create: true
+      force: true
+      path: .config/cheat/conf.yml
+    ~/.config/cheat/cheatsheets/personal:
+      create: true
+      force: true
+      path: .config/cheat/cheatsheets/personal
     ~/.config/yamllint/config:
       create: true
       force: true
