Disable monitoring in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ set -g @continuum-restore 'on'
 
 ## Keybindings
 
-# Set Ctrl-\ as leader instead of Ctrl-b
+# Set <C-\> as leader instead of <C-b>
 unbind C-b
 set-option -g prefix 'C-\'
 
@@ -45,20 +45,21 @@ bind -N "Copy visual selection to buffer" -T copy-mode-vi y send-keys -X copy-pi
 unbind p
 bind -N "Paste latest buffer" p paste-buffer
 
-# Use Ctrl-o to open a fancy window finder
+# Use <C-o> to open a fancy window finder
 bind -N "Open fuzzy window finder" -n C-o display-popup -E "tmux list-windows | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | cut -d \":\" -f 1 | xargs tmux select-window -t"
 
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
 
+# Use <C-s> to start backwards search
 bind -N "Perform backwards search in copy mode" -n C-s copy-mode \; send-keys ?
 
 ## Monitoring
 
-# Monitor for activity, bells, or silence of 10 seconds in the other windows
-setw -g monitor-activity on
-setw -g monitor-bell on
-setw -g monitor-silence 5
+# Don't bother monitoring for activity, bells, or silence in the other windows
+setw -g monitor-activity off
+setw -g monitor-bell off
+setw -g monitor-silence 0
 
 ## Styling
 
@@ -79,9 +80,6 @@ setw -g window-status-format '#I#[fg=#ffffff,bg=black]:#W#[fg=#3366cc,bg=black]#
 
 # Set the style for the current window in status bar
 setw -g window-status-current-format '#[fg=#ffffff,bg=black]#I#[fg=#ffffff]:#[fg=#ffffff,bold]#W#[fg=#3366cc]#F'
-
-# Don't highlight other windows with activity in the status bar
-setw -g window-status-activity-style "bg=black"
 
 # Set style for pane border
 set -g pane-border-style "fg=#254A93 bg=black"
