--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,11 +48,12 @@ bind -N "Paste latest buffer" p paste-buffer
 # Use <C-o> to open a fancy window finder
 bind -N "Open fuzzy window finder" -n C-o display-popup -E "tmux list-windows | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | cut -d \":\" -f 1 | xargs tmux select-window -t"
 
+# Use <C-u> to start backwards search
+bind -N "Perform backwards search in copy mode" -n 'C-u' copy-mode \; send-keys ?
+
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
 
-# Use <C-s> to start backwards search
-bind -N "Perform backwards search in copy mode" -n C-s copy-mode \; send-keys ?
 
 ## Monitoring
 
@@ -94,10 +95,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Navigate between tmux panes and vim splits
 # Use <C-h>,<C-j>,<C-k>,<C-l> to navigate
 set -g @plugin 'christoomey/vim-tmux-navigator'
-
-# fzf URL opener
-# Use <C-u> to fuzzy-find and open links
-set -g @plugin 'wfxr/tmux-fzf-url'
 
 # Save and restart tmux sessions across system reboots 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
