Reenable activity monitoring

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -57,8 +57,9 @@ bind -N "Open copy mode" Escape copy-mode
 
 ## Monitoring
 
-# Don't bother monitoring for activity, bells, or silence in the other windows
-setw -g monitor-activity off
+# Monitor activity
+setw -g monitor-activity on
+# Don't bother monitoring for bells or silence in the other windows
 setw -g monitor-bell off
 setw -g monitor-silence 0
 
