Fix window monitoring

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,6 +83,9 @@ setw -g window-status-format '#I#[fg=#ffffff,bg=black]:#W#[fg=#3366cc,bg=black]#
 # Set the style for the current window in status bar
 setw -g window-status-current-format '#[fg=#ffffff,bg=black]#I#[fg=#ffffff]:#[fg=#ffffff,bold]#W#[fg=#3366cc]#F'
 
+# Don't highlight other windows with activity in the status bar
+setw -g window-status-activity-style "bg=black"
+
 # Set style for pane border
 set -g pane-border-style "fg=#254A93 bg=black"
 set -g pane-active-border-style "fg=#254A93 bg=black"
