Add tmux shortcut to copy without exiting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,7 +41,8 @@ setw -g mode-keys vi
 
 # Use v, y, and p to begin visual selection and yank/paste like vim
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
-bind -N "Copy visual selection to buffer" -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind -N "Copy visual selection to buffer and exit" -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
+bind -N "Copy visual selection to buffer" -T copy-mode-vi Y send-keys -X copy-pipe
 unbind p
 bind -N "Paste latest buffer" p paste-buffer
 
