Add tmux toggle for rectangle selection

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,6 +43,7 @@ setw -g mode-keys vi
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
 bind -N "Copy visual selection to buffer and exit" -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind -N "Copy visual selection to buffer" -T copy-mode-vi Y send-keys -X copy-pipe
+bind -N "Toggle rectangle selection" -T copy-mode-vi r send-keys -X rectangle-toggle
 unbind p
 bind -N "Paste latest buffer" p paste-buffer
 
