--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,8 +44,6 @@ bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
 bind -N "Copy visual selection to buffer and exit" -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 bind -N "Copy visual selection to buffer" -T copy-mode-vi Y send-keys -X copy-pipe
 bind -N "Toggle rectangle selection" -T copy-mode-vi r send-keys -X rectangle-toggle
-unbind p
-bind -N "Paste latest buffer" p paste-buffer
 
 # Use <C-o> to open a fancy window finder
 bind -N "Open fuzzy window finder" -n C-o display-popup -E "tmux list-windows | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | cut -d \":\" -f 1 | xargs tmux select-window -t"
@@ -55,7 +53,6 @@ bind -N "Perform backwards search in copy mode" -n 'C-u' copy-mode \; send-keys 
 
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
-
 
 ## Monitoring
 
@@ -106,8 +103,11 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Open highlighted link/file with <prefix>-o
+# Open highlighted link/file with o
 set -g @plugin 'tmux-plugins/tmux-open'
+
+# Open urls quickly with fzf with <prefix>-u
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 # Set up tpm
 # Remember to run <prefix>I to install!
