--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -1,4 +1,5 @@
 {
-    "default": true,
-    "line-length": false
+  "default": true,
+  "line-length": false,
+  "single-trailing-newline": false
 }
