Enable status in starship

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,5 +1,10 @@
 add_newline = false
 
+[status]
+disabled = false
+map_symbol = true
+format = '[$symbol $status]($style) '
+
 [cmd_duration]
 disabled = true
 
