--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,8 +54,8 @@ bind -N "Perform backwards search in copy mode" -n 'C-u' copy-mode \; send-keys 
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
 
-# Capture entire scroll buffer for fzf-url plugin
-set -g @fzf-url-history-limit '50000'
+# Capture more of the scroll buffer for fzf-url plugin
+set -g @fzf-url-history-limit '10000'
 
 ## Monitoring
 
