Switch to tmux-yank and tmux-copycat

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,14 +48,8 @@ bind -N "Toggle rectangle selection" -T copy-mode-vi r send-keys -X rectangle-to
 # Use <C-o> to open a fancy window finder
 bind -N "Open fuzzy window finder" -n C-o display-popup -E "tmux list-windows | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | cut -d \":\" -f 1 | xargs tmux select-window -t"
 
-# Use <C-u> to start backwards search
-bind -N "Perform backwards search in copy mode" -n 'C-u' copy-mode \; send-keys ?
-
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
-
-# Capture more of the scroll buffer for fzf-url plugin
-set -g @fzf-url-history-limit '10000'
 
 ## Monitoring
 
@@ -109,8 +103,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Open highlighted link/file with o
 set -g @plugin 'tmux-plugins/tmux-open'
 
-# Open urls quickly with fzf with <prefix>-u
-set -g @plugin 'wfxr/tmux-fzf-url'
+# Yank to the clipboard
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Better search in copy mode
+# <prefix>/ to start copycat search
+# <prefix><C-f> to find file names
+# <prefix><C-u> to find URLs
+set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Set up tpm
 # Remember to run <prefix>I to install!
