Switch tmux-yank to copy-pipe

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ set -g renumber-windows on
 # Restore windows when restarting tmux
 set -g @continuum-restore 'on'
 
+# Don't exit copy mode when yanking
+set -g @yank_action 'copy-pipe'
+
 ## Keybindings
 
 # Set <C-\> as leader instead of <C-b>
