--- a/settings.json
+++ b/settings.json
@@ -29,6 +29,10 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  // Open CSS files in Tailwind mode
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
   // Don't bother me with confirmations all the time
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
