--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,6 +18,10 @@
       create: true
       force: true
       path: .config/starship.toml
+    ~/.config/fish:
+      create: true
+      force: true
+      path: .config/fish/
     ~/.config/nvim:
       create: true
       force: true
