--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 ## Global settings
 
-# Set default shell to zsh
+# Set default shell to fish
 set -g default-shell ${SHELL}
 set -g default-command ${SHELL}
 
