Set a nicer keybinding for copycat hash search

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ set -g @continuum-restore 'on'
 # Don't exit copy mode when yanking
 set -g @yank_action 'copy-pipe'
 
+# Set a nicer keybinding for copycat hash search
+set -g @copycat_hash_search 'C-h'
+
 ## Keybindings
 
 # Set <C-\> as leader instead of <C-b>
