--- a/.gitconfig
+++ b/.gitconfig
@@ -18,8 +18,7 @@
     c = "!fish -c 'git_fzf_checkout'"
     cam = "!fish -c 'git_commit_all_message $argv'"
     camp = "!fish -c 'git_commit_all_message_push $argv'"
-    echo = "!fish -c 'echo $argv'"
-    d = "diff"
+    d = "diff HEAD"
     df = "!fish -c 'git_fzf_diff'"
     dfn = "!fish -c 'git_fzf_diff_name_only'"
     l = "log --oneline --decorate"
