Add toggle hotkeys to VS Code

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,6 +116,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # <prefix>/ to start copycat search
 # <prefix><C-f> to find file names
 # <prefix><C-u> to find URLs
+# <prefix><C-h> to find git hashes
+# <prefix><C-g> to iterate over git status messages
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Set up tpm
