--- a/settings.json
+++ b/settings.json
@@ -71,5 +71,6 @@
     "-t",
     "${workspaceFolderBasename}"
   ],
-  "terminal.external.osxExec": "iTerm.app"
+  "terminal.external.osxExec": "iTerm.app",
+  "terminal.integrated.macOptionIsMeta": true
 }
