Add copycat Ctrl-t

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,6 +23,8 @@ set -g @yank_action 'copy-pipe'
 # Set a nicer keybinding for copycat hash search
 set -g @copycat_hash_search 'C-h'
 
+set -g @copycat_search_C-t '"[^"]+"'
+
 ## Keybindings
 
 # Set <C-\> as leader instead of <C-b>
