--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,15 @@ set -g @continuum-restore 'on'
 # Don't exit copy mode when yanking
 set -g @yank_action 'copy-pipe'
 
-# Set a nicer keybinding for copycat hash search
-set -g @copycat_hash_search 'C-h'
+bind -N "Perform backwards search" '/' copy-mode \; send-keys -X search-backward
+bind -N "Perform backwards search for URLs" 'C-u' copy-mode \; send-keys -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
+bind -N "Perform backwards search for files" 'C-f' copy-mode \; send-keys -X search-backward "(^|^\.|[[:space:]]|[[:space:]]\.|[[:space:]]\.\.|^\.\.)[[:alnum:]~_-]*/[][[:alnum:]_.#$%&+=/@-]*"
+bind -N "Perform backwards search for digits" 'C-d' copy-mode \; send-keys -X search-backward "[[:digit:]]+"
+bind -N "Perform backwards search for hashes" 'C-h' copy-mode \; send-keys -X search-backward "\b([0-9a-f]{7,40}|[[:alnum:]]{52}|[0-9a-f]{64})\b"
+bind -N "Perform backwards search for hashes" 'C-t' copy-mode \; send-keys -X search-backward "\b([0-9a-f]{7,40}|[[:alnum:]]{52}|[0-9a-f]{64})\b"
+unbind C-p
+bind -N "Perform backwards search for parentheses" "C-p" copy-mode \; send-keys -X search-backward "\"[^\"]*\""
+bind -N "Perform backwards search for single-quotes" "C-q" copy-mode \; send-keys -X search-backward "'[^']*'"
 
 set -g @copycat_search_C-t '"[^"]+"'
 
@@ -113,14 +120,6 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 # Yank to the clipboard
 set -g @plugin 'tmux-plugins/tmux-yank'
-
-# Better search in copy mode
-# <prefix>/ to start copycat search
-# <prefix><C-f> to find file names
-# <prefix><C-u> to find URLs
-# <prefix><C-h> to find git hashes
-# <prefix><C-g> to iterate over git status messages
-set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # Set up tpm
 # Remember to run <prefix>I to install!
