Fix backwards search

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,16 +20,6 @@ set -g @continuum-restore 'on'
 # Don't exit copy mode when yanking
 set -g @yank_action 'copy-pipe'
 
-bind -N "Perform backwards search" '/' copy-mode \; send-keys -X search-backward
-bind -N "Perform backwards search for URLs" 'C-u' copy-mode \; send-keys -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
-bind -N "Perform backwards search for files" 'C-f' copy-mode \; send-keys -X search-backward "(^|^\.|[[:space:]]|[[:space:]]\.|[[:space:]]\.\.|^\.\.)[[:alnum:]~_-]*/[][[:alnum:]_.#$%&+=/@-]*"
-bind -N "Perform backwards search for digits" 'C-d' copy-mode \; send-keys -X search-backward "[[:digit:]]+"
-bind -N "Perform backwards search for hashes" 'C-h' copy-mode \; send-keys -X search-backward "\b([0-9a-f]{7,40}|[[:alnum:]]{52}|[0-9a-f]{64})\b"
-bind -N "Perform backwards search for hashes" 'C-t' copy-mode \; send-keys -X search-backward "\b([0-9a-f]{7,40}|[[:alnum:]]{52}|[0-9a-f]{64})\b"
-unbind C-p
-bind -N "Perform backwards search for parentheses" "C-p" copy-mode \; send-keys -X search-backward "\"[^\"]*\""
-bind -N "Perform backwards search for single-quotes" "C-q" copy-mode \; send-keys -X search-backward "'[^']*'"
-
 set -g @copycat_search_C-t '"[^"]+"'
 
 ## Keybindings
@@ -54,6 +44,20 @@ bind -N "Resize pane to the right (repeatable)" -r L resize-pane -R 5
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Use <prefix>Escape to enter copy-mode
+bind -N "Open copy mode" Escape copy-mode
+
+# Use <prefix><hotkey> for various convenient searches
+bind -N "Perform backwards search" '/' copy-mode \; send-keys ?
+bind -N "Perform backwards search for URLs" 'C-u' copy-mode \; send-keys -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
+bind -N "Perform backwards search for files" 'C-f' copy-mode \; send-keys -X search-backward "(^|^\.|[[:space:]]|[[:space:]]\.|[[:space:]]\.\.|^\.\.)[[:alnum:]~_-]*/[][[:alnum:]_.#$%&+=/@-]*"
+bind -N "Perform backwards search for digits" 'C-d' copy-mode \; send-keys -X search-backward "[[:digit:]]+"
+bind -N "Perform backwards search for hashes" 'C-h' copy-mode \; send-keys -X search-backward "\b([0-9a-f]{7,40}|[[:alnum:]]{52}|[0-9a-f]{64})\b"
+bind -N "Perform backwards search for hashes" 'C-t' copy-mode \; send-keys -X search-backward "\b([0-9a-f]{7,40}|[[:alnum:]]{52}|[0-9a-f]{64})\b"
+unbind C-p
+bind -N "Perform backwards search for parentheses" "C-p" copy-mode \; send-keys -X search-backward "\"[^\"]*\""
+bind -N "Perform backwards search for single-quotes" "C-q" copy-mode \; send-keys -X search-backward "'[^']*'"
+
 # Use v, y, and p to begin visual selection and yank/paste like vim
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
 bind -N "Copy visual selection to buffer and exit" -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
@@ -62,9 +66,6 @@ bind -N "Toggle rectangle selection" -T copy-mode-vi r send-keys -X rectangle-to
 
 # Use <C-o> to open a fancy window finder
 bind -N "Open fuzzy window finder" -n C-o display-popup -E "tmux list-windows | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | cut -d \":\" -f 1 | xargs tmux select-window -t"
-
-# Use <prefix>Escape to enter copy-mode
-bind -N "Open copy mode" Escape copy-mode
 
 ## Monitoring
 
