--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
     c = "!fish -c 'git_fzf_checkout'"
     cam = "!fish -c 'git_commit_all_message $argv'"
     camp = "!fish -c 'git_commit_all_message_push $argv'"
+    ci = "!fish -c 'git_fzf_interactive_checkout'"
     d = "diff HEAD"
     df = "!fish -c 'git_fzf_diff'"
     dfn = "!fish -c 'git_fzf_diff_name_only'"
