--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,6 +50,7 @@ bind -N "Open copy mode" Escape copy-mode
 # Use <prefix><hotkey> for various convenient searches
 bind -N "Perform backwards search" '/' copy-mode \; send-keys ?
 bind -N "Perform backwards search for URLs" 'C-u' copy-mode \; send-keys -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
+bind -N "Perform smart backwards search" 'C-f' display-popup -E "fish -c tmux_fzf_search"
 
 # Use v, y, and p to begin visual selection and yank/paste like vim
 bind -N "Begin visual selection" -T copy-mode-vi v send-keys -X begin-selection
