--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,6 @@ set -g @continuum-restore 'on'
 # Don't exit copy mode when yanking
 set -g @yank_action 'copy-pipe'
 
-set -g @copycat_search_C-t '"[^"]+"'
-
 ## Keybindings
 
 # Set <C-\> as leader instead of <C-b>
@@ -35,7 +33,7 @@ bind -N "Create a new window at the current working directory" c new-window -c "
 bind -N "Split window vertically" | split-window -h -c "#{pane_current_path}"
 bind -N "Split window horizontally" - split-window -v -c "#{pane_current_path}"
 
-# Use {H,J,K,L} repeatedly to resize panes
+# Use <leader>{H,J,K,L} repeatedly to resize panes
 bind -N "Resize pane to the left (repeatable)" -r H resize-pane -L 5
 bind -N "Resize pane lower (repeatable)" -r J resize-pane -D 5
 bind -N "Resize pane higher (repeatable)" -r K resize-pane -U 5
@@ -47,7 +45,7 @@ setw -g mode-keys vi
 # Use <prefix>Escape to enter copy-mode
 bind -N "Open copy mode" Escape copy-mode
 
-# Use <prefix><hotkey> for various convenient searches
+# Use <prefix><C-f> for to open a smart backwards search
 bind -N "Perform backwards search" '/' copy-mode \; send-keys ?
 bind -N "Perform backwards search for URLs" 'C-u' copy-mode \; send-keys -X search-backward "(https?://|git@|git://|ssh://|ftp://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*"
 bind -N "Perform smart backwards search" 'C-f' display-popup -E "fish -c tmux_fzf_search"
@@ -95,6 +93,8 @@ setw -g window-status-activity-style "bg=black"
 # Set style for pane border
 set -g pane-border-style "fg=#254A93 bg=black"
 set -g pane-active-border-style "fg=#254A93 bg=black"
+
+## Plugins
 
 # Enable tpm
 set -g @plugin 'tmux-plugins/tpm'
